--- a/src/pages/resume.css
+++ b/src/pages/resume.css
@@ -1,19 +1,23 @@
 .resume {
-  text-align: center;
+  /* text-align: center; */
 }
 
 .resume .download-links {
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 .resume .center {
-  margin: auto;
+  /* margin: auto; */
   /* width: 50%; */
   /* border: 3px solid black; */
   /* padding: 10px; */
 }
 
 .react-pdf__Document {
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
+}
+
+.pdf-doc {
+  width: 50%;
 }
