added material icons and pictures

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -7,7 +7,10 @@
 }
 .links li {
   display: inline;
-  padding: 20px;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 1%;
+  padding-bottom: 1%;
 }
 .links a {
   text-decoration: none;
@@ -18,10 +21,18 @@
 .links a:link {
   color: #67727a;
 }
-.download-link li {
+.links a:hover {
+  background-color: #c3d7df;
+}
+.download-link {
   border: 2px solid #6991ac;
+  margin-top: 5%;
 }
 
 body {
   /* background-color: #c3d7df; */
+}
+.material-icons {
+  font-size: 18px !important;
+  margin-top: 1%;
 }
