--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -69,6 +69,22 @@
   float: left;
 }
 
+.mobile .pic-and-links {
+  width: 100%;
+  float: left;
+}
+
+.mobile .bio {
+  width: 90%;
+  float: left;
+  margin-left: 5%;
+  margin-top: 10px;
+}
+
+.mobile .pic-and-links h2 {
+  text-align: center;
+}
+
 .pic-and-links {
   margin-top: 25px;
 }
